<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView android:id="@+id/LblPosicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20dp"
        android:text="@string/posicion_actual"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal" />

    <TextView android:id="@+id/LblEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadoprov"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"/>

    <TextView android:id="@+id/LblEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/proveedor"
        android:layout_gravity="center_horizontal"/>

    <TextView android:id="@+id/LblPosLatitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"
        android:text="@string/latitud" />

    <TextView android:id="@+id/LblPosLongitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"
        android:text="@string/longitud"/>

    <TextView android:id="@+id/LblPosPrecision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/presision"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button android:id="@+id/BtnActualizar"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/activar" />

        <Button android:id="@+id/BtnDesactivar"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/desactivar"
            android:layout_gravity="right" />
    </LinearLayout>
</LinearLayout>